[UPD] add cartella bonus

--- a/.gitignore/prova.html
+++ b/.gitignore/prova.html
@@ -1,4 +1,4 @@
-//<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,7 @@
     <title>Calcolo del prezzo del biglietto del treno</title>
 </head>
 <body>
+    <h1>demo condizionali</h1>
     <!-- js -->
     <script type="text/javascript" src="/prova/prova.js"></script>
     <!-- //js -->
